Added jx and swing samples. Fixed errors when run with java17