@@ -1,21 +1,16 @@
 
-var platform = ""
-var vmArgs = mutableListOf<String>()
 val chromiumVersion = "106.0.22"
 val chromiumPlatformVersion = "106.0.20"
 val os = System.getProperty("os.name").toLowerCase()
+var vmArgs = mutableListOf<String>()
+var platform = ""
 if (os.contains("linux")) {
     platform = "gtk.linux"
 } else if (os.contains("mac")) {
     platform = "cocoa.macosx"
-    vmArgs.add("-XstartOnFirstThread")
+    vmArgs.addAll(listOf("--add-opens", "java.desktop/java.awt=ALL-UNNAMED", "--add-opens", "java.desktop/sun.awt=ALL-UNNAMED", "--add-opens", "java.desktop/sun.lwawt=ALL-UNNAMED", "--add-opens", "java.desktop/sun.lwawt.macosx=ALL-UNNAMED"))
 } else if (os.contains("windows")) {
     platform = "win32.win32"
-}
-
-val arch = when {
-    System.getProperty("os.arch").toLowerCase().contains("amd64") -> "x86_64"
-    else -> System.getProperty("os.arch").toLowerCase()
 }
 
 plugins {
@@ -29,11 +24,11 @@ repositories {
 }
 
 dependencies {
-    implementation("com.equo:com.equo.chromium.cef.${platform}.${arch}:${chromiumPlatformVersion}")
+    implementation("com.equo:com.equo.chromium.cef.${platform}.x86_64:${chromiumPlatformVersion}")
     implementation("com.equo:com.equo.chromium:${chromiumVersion}")
 }
 
 application {
     applicationDefaultJvmArgs = vmArgs
-    mainClass.set("Standalone.StandaloneKt")
+    mainClass.set("Swing.SwingKt")
 }
