@@ -3,16 +3,16 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>equochromium</groupId>
-	<artifactId>standalone</artifactId>
+	<artifactId>swing</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
 
 	<properties>
 		<maven.compiler>11</maven.compiler>
+		<flags>-Dempty</flags>
 		<chromium.version>106.0.22</chromium.version>
 		<chromium.platform.version>106.0.20</chromium.platform.version>
-		<arch>${os.arch}</arch>
-		<flags>-Dempty</flags>
+		<chromium.jx.version>106.0.0.0</chromium.jx.version>
 	</properties>
 
 	<repositories>
@@ -25,12 +25,12 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.equo</groupId>
-			<artifactId>com.equo.chromium</artifactId>
-			<version>${chromium.version}</version>
+			<artifactId>com.equo.chromium.jx</artifactId>
+			<version>${chromium.jx.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.equo</groupId>
-			<artifactId>com.equo.chromium.cef.${platform}.${arch}</artifactId>
+			<artifactId>com.equo.chromium.cef.${platform}.x86_64</artifactId>
 			<version>${chromium.platform.version}</version>
 		</dependency>
 	</dependencies>
@@ -59,12 +59,7 @@
 				</executions>
 				<configuration>
 					<executable>java</executable>
-					<arguments>
-						<argument>${flags}</argument>
-						<argument>-classpath</argument>
-						<classpath/>
-						<argument>equochromium.SampleStandalone</argument>
-					</arguments>
+					<commandlineArgs>${flags} -classpath %classpath equochromium.SampleSwing</commandlineArgs>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -101,19 +96,8 @@
 				</os>
 			</activation>
 			<properties>
-				<flags>-XstartOnFirstThread</flags>
 				<platform>cocoa.macosx</platform>
-			</properties>
-		</profile>
-		<profile>
-			<id>amd64</id>
-			<activation>
-				<os>
-					<arch>amd64</arch>
-				</os>
-			</activation>
-			<properties>
-				<arch>x86_64</arch>
+				<flags>--add-opens java.desktop/java.awt=ALL-UNNAMED --add-opens java.desktop/sun.awt=ALL-UNNAMED --add-opens java.desktop/sun.lwawt=ALL-UNNAMED --add-opens java.desktop/sun.lwawt.macosx=ALL-UNNAMED</flags>
 			</properties>
 		</profile>
 	</profiles>
